--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,69 @@
  *= require_tree .
  *= require_self
  */
+
+ * {
+   font-family: 'Montserrat', sans-serif;
+ }
+
+  .contenant {
+    width: 100%;
+    height: 2%;
+  }
+
+  .contenant img {
+    object-fit: cover;
+    width: 100%;
+    height: 5%;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  .maintext {
+    text-align: left;
+    position: absolute;
+    top: 70%;
+    left: 10%;
+    font-size: 128px;
+    font-weight: 900;
+    color: #B6244F;
+  }
+
+
+  a {
+    display: flex;
+    text-decoration: none;
+    border: 2px solid;
+    border-radius: 5px;
+    transition: all 0.2s ease-out;
+    margin: 10px;
+    color: black;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  a:hover {
+    display: flex;
+    text-decoration: none;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color: #B89685;
+    transition: all 0.2s ease-out;
+    flex: none;
+    color: black;
+  }
+
+  tbody {
+    display: flex;
+    justify-content: space-around;
+
+  }
+
+  td {
+    justify-content: space-around;
+    margin: 10px;
+    padding: 10px;
+    
+  }
